# Vostok

./: .coverage  .gitignore  LICENSE  README.md  config.py  era5_tool.py  main.py  mcp_server.py  memory.py  pyproject.toml  repl_tool.py  requirements.txt  setup_env.sh  web_main.py
src/vostok/: __init__.py  config.py  memory.py  retrieval.py  server.py
src/vostok/tools/: era5.py
tests/: test_config.py
web/: __init__.py  agent_wrapper.py  app.py
web/routes/: __init__.py  api.py  pages.py  websocket.py
web/static/css/: style.css
web/static/js/: chat.js
web/templates/: base.html  index.html
web/templates/components/: message.html
